--- a/frontend/components/styles.css
+++ b/frontend/components/styles.css
@@ -1,14 +1,14 @@
 :root {
-    --dark-cyan: #1ca9c9ff;
+    --pacific-cyan: #1ca9c9ff;
     --white-smoke: #f5f5f5ff;
-    --robin-egg-blue: #87ceebff;
+    --sky-blue: #87ceebff;
     --oynx: #353839ff;
     --amber: #ffbf00ff;
 }
 
 body {
     margin: 0;
-    font-family: Operator Mono, sans-serif;
+    font-family: Fira Code, sans-serif;
     background-color: var(--oynx);
     color: var(--white-smoke);
 }
@@ -33,7 +33,7 @@ body {
 }
 
 .left h1 {
-    color: var(--dark-cyan);
+    color: var(--pacific-cyan);
     font-size: 4rem;
     font-style: italic;
 }
@@ -72,14 +72,14 @@ form {
 }
 
 input, select, textarea {
-    width: 100%;
+    width: 90%;
     padding: 0.5rem;
     margin: 0.5rem 0;
     border: 1px solid var(--white-smoke);
     border-radius: 4px;
     background-color: var(--white-smoke);
     color: var(--oynx);
-    font-family: Operator Mono, sans-serif;
+    font-family: Fira Code, sans-serif;
     font-size: 1rem;
 }
 
@@ -89,19 +89,20 @@ input::placeholder {
 
 .button {
     padding: 0.5rem 1rem;
+    gap: 1rem;
     margin-top: 0.5rem;
     border: none;
     border-radius: 4px;
-    background-color: var(--dark-cyan);
+    background-color: var(--pacific-cyan);
     color: var(--oynx);
     cursor: pointer;
     transition: background-color 0.3s ease;
-    font-family: Operator Mono, sans-serif;
+    font-family: Fira Code, sans-serif;
     text-decoration: none;
 }
 
 button:hover {
-    background-color: var(--robin-egg-blue);
+    background-color: var(--sky-blue);
 }
 
 .button-container {
@@ -110,7 +111,7 @@ button:hover {
 
 body {
     margin: 0;
-    font-family: Operator Mono, sans-serif;
+    font-family: Fira Code, sans-serif;
     background-color: var(--oynx);
     color: var(--white-smoke);
 }
@@ -127,7 +128,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    border-bottom: 2px solid var(--dark-cyan);
+    border-bottom: 2px solid var(--pacific-cyan);
 }
 
 .navbar-left h1 {
@@ -143,13 +144,13 @@ body {
 
 .navbar-links a {
     text-decoration: none;
-    color: var(--robin-egg-blue);
+    color: var(--sky-blue);
     font-size: 1rem;
     transition: color 0.3s ease;
 }
 
 .navbar-links a:hover {
-    color: var(--dark-cyan);
+    color: var(--pacific-cyan);
 }
 
 .card-container {
@@ -163,7 +164,7 @@ body {
 }
 
 .card {
-    background-color: var(--dark-cyan);
+    background-color: var(--pacific-cyan);
     color: var(--oynx);
     padding: 1rem;
     border-radius: 8px;
@@ -201,15 +202,15 @@ canvas {
 
 
 table {
-    width: 80%;
+    width: 95%;
     border-collapse: collapse;
     margin: 0 auto;
     text-align: left;
-    border-color: var(--dark-cyan);
+    border-color: var(--pacific-cyan);
 }
 
 thead {
-    background-color: var(--dark-cyan);
+    background-color: var(--pacific-cyan);
     color: var(--white-smoke);
     font-size: 1.5rem;
 }
@@ -225,7 +226,7 @@ tbody {
 }
 
 tbody tr:hover {
-    color: var(--robin-egg-blue);
+    color: var(--sky-blue);
 }
 
 tbody td {
@@ -235,7 +236,7 @@ tbody td {
 
 
 button {
-    background-color: var(--dark-cyan);
+    background-color: var(--pacific-cyan);
     color: var(--oynx);
     border: none;
     padding: 0.5rem 1rem;
@@ -246,12 +247,12 @@ button {
 }
 
 button:hover {
-    background-color: var(--robin-egg-blue);
+    background-color: var(--sky-blue);
 }
 
 
 /* details summary {
-    background-color: var(--robin-egg-blue);
+    background-color: var(--sky-blue);
     color: var(--oynx);
     /* padding: 0.5rem 1rem; 
     border-radius: 4px;
@@ -263,7 +264,7 @@ button:hover {
 }
 
 details summary:hover {
-    background-color: var(--dark-cyan);
+    background-color: var(--pacific-cyan);
 } */
 
 .search-container {
@@ -286,21 +287,21 @@ details summary:hover {
     flex: 1; 
     padding: 0.5rem; 
     font-size: 1rem; 
-    border: 1px solid var(--dark-cyan); 
+    border: 1px solid var(--pacific-cyan); 
     border-radius: 4px; 
     outline: none; 
 }
 
 .search-form input:focus {
-    border-color: var(--robin-egg-blue); 
-    box-shadow: 0 0 4px var(--robin-egg-blue); 
+    border-color: var(--sky-blue); 
+    box-shadow: 0 0 4px var(--sky-blue); 
 }
 
 .search-form .button {
     padding: 0.5rem 1rem; 
     font-size: 1rem; 
     color: var(--white-smoke); 
-    background-color: var(--dark-cyan); 
+    background-color: var(--pacific-cyan); 
     border: none; 
     border-radius: 4px; 
     cursor: pointer; 
@@ -308,7 +309,7 @@ details summary:hover {
 }
 
 .search-form .btn:hover {
-    background-color: var(--robin-egg-blue); 
+    background-color: var(--sky-blue); 
 }
 
 .register-container {
@@ -344,13 +345,13 @@ details summary:hover {
 }
 
 .redirect-link {
-    color: var(--robin-egg-blue);
+    color: var(--sky-blue);
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .redirect-link:hover {
-    color: var(--dark-cyan);
+    color: var(--pacific-cyan);
 }
 
 
@@ -379,7 +380,7 @@ details summary:hover {
 }
 
 .modal-content h2 {
-    font-family: "Operator Mono", sans-serif; /* Your preferred font */
+    font-family: "Fira Code", sans-serif; /* Your preferred font */
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
@@ -391,19 +392,19 @@ details summary:hover {
 }
 
 .modal-content button {
-    background: var(--dark-cyan);
+    background: var(--pacific-cyan);
     color: var(--white-smoke);
     border: none;
     border-radius: 5px;
     padding: 10px 15px;
     cursor: pointer;
     transition: background 0.3s ease;
-    font-family: "Operator Mono", sans-serif;
+    font-family: "Fira Code", sans-serif;
     font-size: 1rem;
 }
 
 .modal-content button:hover {
-    background: var(--robin-egg-blue);
+    background: var(--sky-blue);
 }
 
 .modal-content textarea,
@@ -414,7 +415,7 @@ details summary:hover {
     border: 1px solid var(--oynx);
     border-radius: 4px;
     font-size: 1rem;
-    font-family: "Operator Mono", sans-serif;
+    font-family: "Fira Code", sans-serif;
     box-sizing: border-box;
 }
 
@@ -432,7 +433,7 @@ details summary:hover {
 }
 
 .modal-content table th {
-    background: var(--dark-cyan);
+    background: var(--pacific-cyan);
     color: var(--white-smoke);
 }
 
@@ -445,4 +446,8 @@ details summary:hover {
         opacity: 1;
         transform: scale(1);
     }
+}
+
+.close-button {
+    background-color: var(--amber);
 }
