--- a/frontend/components/styles.css
+++ b/frontend/components/styles.css
@@ -13,6 +13,103 @@ body {
     color: var(--white-smoke);
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    max-width: 600px;
+    
+}
+
+input, select, textarea {
+    width: 90%;
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border: 1px solid var(--white-smoke);
+    border-radius: 4px;
+    background-color: var(--white-smoke);
+    color: var(--oynx);
+    font-family: Fira Code, sans-serif;
+    font-size: 1rem;
+}
+
+input::placeholder {
+    color: var(--oynx);
+}
+
+canvas {
+    background-color: var(--white-smoke);
+    border-radius: 8px;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    max-width: 90%;
+}
+
+table {
+    width: 95%;
+    border-collapse: collapse;
+    margin: 0 auto;
+    text-align: left;
+    border-color: var(--pacific-cyan);
+}
+
+thead {
+    background-color: var(--pacific-cyan);
+    color: var(--white-smoke);
+    font-size: 1.5rem;
+}
+
+thead th {
+    padding: 0.75rem;
+}
+
+tbody {
+    background-color: var(--oynx);
+    color: var(--white-smoke);
+    font-size: 1.25rem;
+}
+
+tbody tr:hover {
+    color: var(--sky-blue);
+}
+
+tbody td {
+    padding: 0.75rem;
+    border: 1px solid var(--white-smoke);
+}
+
+button {
+    background-color: var(--pacific-cyan);
+    color: var(--oynx);
+    border: none;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: var(--sky-blue);
+}
+
+details summary {
+    background-color: var(--sky-blue);
+    color: var(--oynx);
+    padding: 0.5rem 1rem; 
+    border-radius: 4px;
+    font-size: 1rem;
+    cursor: pointer;
+    list-style: none;
+    /* margin: 0.5rem 0; */
+    transition: background-color 0.3s ease;
+}
+
+details summary:hover {
+    background-color: var(--pacific-cyan);
+}
+
 .login-container {
     display: flex;
     align-items: center;
@@ -62,31 +159,6 @@ body {
     font-size: 1.5rem;
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
-    
-}
-
-input, select, textarea {
-    width: 90%;
-    padding: 0.5rem;
-    margin: 0.5rem 0;
-    border: 1px solid var(--white-smoke);
-    border-radius: 4px;
-    background-color: var(--white-smoke);
-    color: var(--oynx);
-    font-family: Fira Code, sans-serif;
-    font-size: 1rem;
-}
-
-input::placeholder {
-    color: var(--oynx);
-}
-
 .button {
     padding: 0.5rem 1rem;
     gap: 1rem;
@@ -98,22 +170,13 @@ input::placeholder {
     cursor: pointer;
     transition: background-color 0.3s ease;
     font-family: Fira Code, sans-serif;
+    font-size: 1rem;
+    font-weight: bold;
     text-decoration: none;
-}
-
-button:hover {
-    background-color: var(--sky-blue);
 }
 
 .button-container {
     text-align: center;
-}
-
-body {
-    margin: 0;
-    font-family: Fira Code, sans-serif;
-    background-color: var(--oynx);
-    color: var(--white-smoke);
 }
 
 .container {
@@ -183,15 +246,6 @@ body {
     font-weight: bold;
 }
 
-canvas {
-    background-color: var(--white-smoke);
-    border-radius: 8px;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    max-width: 90%;
-}
-
-
 .table-container {
     display: flex;
     flex-direction: column; 
@@ -199,73 +253,6 @@ canvas {
     padding: 2rem;
     box-sizing: border-box;
 }
-
-
-table {
-    width: 95%;
-    border-collapse: collapse;
-    margin: 0 auto;
-    text-align: left;
-    border-color: var(--pacific-cyan);
-}
-
-thead {
-    background-color: var(--pacific-cyan);
-    color: var(--white-smoke);
-    font-size: 1.5rem;
-}
-
-thead th {
-    padding: 0.75rem;
-}
-
-tbody {
-    background-color: var(--oynx);
-    color: var(--white-smoke);
-    font-size: 1.25rem;
-}
-
-tbody tr:hover {
-    color: var(--sky-blue);
-}
-
-tbody td {
-    padding: 0.75rem;
-    border: 1px solid var(--white-smoke);
-}
-
-
-button {
-    background-color: var(--pacific-cyan);
-    color: var(--oynx);
-    border: none;
-    padding: 0.5rem 1rem;
-    font-size: 0.9rem;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-button:hover {
-    background-color: var(--sky-blue);
-}
-
-
-/* details summary {
-    background-color: var(--sky-blue);
-    color: var(--oynx);
-    /* padding: 0.5rem 1rem; 
-    border-radius: 4px;
-    font-size: 0.9rem;
-    cursor: pointer;
-    list-style: none;
-    margin: 0.5rem 0;
-    transition: background-color 0.3s ease;
-}
-
-details summary:hover {
-    background-color: var(--pacific-cyan);
-} */
 
 .search-container {
     display: flex; 
@@ -353,7 +340,6 @@ details summary:hover {
 .redirect-link:hover {
     color: var(--pacific-cyan);
 }
-
 
 .modal {
     position: fixed;
