--- a/frontend/components/styles.css
+++ b/frontend/components/styles.css
@@ -44,10 +44,18 @@ canvas {
     padding: 1rem;
     margin-bottom: 1rem;
     max-width: 90%;
+    width: 100% !important;
+    height: 300px !important;
 }
 
+/* canvas {
+    width: 100% !important;
+    height: 400px !important;
+  } */
+  
+
 table {
-    width: 95%;
+    width: 80%;
     border-collapse: collapse;
     margin: 0 auto;
     text-align: left;
@@ -57,17 +65,17 @@ table {
 thead {
     background-color: var(--pacific-cyan);
     color: var(--white-smoke);
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 }
 
 thead th {
-    padding: 0.75rem;
+    padding: 0.5rem;
 }
 
 tbody {
     background-color: var(--oynx);
     color: var(--white-smoke);
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 tbody tr:hover {
